# inorbit_edge_executor

./: .bumpversion.cfg  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Makefile  README.md  example.py  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py  tox.ini
.github/workflows/: build-main.yml
inorbit_edge_executor/: behavior_tree.py  datatypes.py  dummy_backend.py  inorbit.py  mission.py  sqlite_backend.py  worker.py  worker_pool.py
tests/: conftest.py  test_behavior_tree.py  test_behavior_tree_error_handler.py  test_edge_datatype.py  test_if_node.py  test_if_step.py  test_inorbit_api.py  test_run_action_node_retry.py  test_set_data_node.py  test_wait_expression_node.py
