[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "inorbit_edge_executor"
version = "3.1.1"
description = "InOrbit Edge Missions Executor"
readme = "README.md"
authors = [
    { name = "Mariano Cereda", email = "mariano.cereda@inorbit.ai" },
    { name = "Hernan Badenes", email = "herchu@inorbit.ai" },
    { name = "Miguel Garcia", email = "mike@inorbit.ai" },
]
license = { text = "MIT" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.21",
    "requests",
    "python-dotenv",
    "inorbit-edge>=1.16.2",
    "pytz>=2022.7",
    "pyyaml",
    "uuid",
    "async-timeout==4.0.3",
    "certifi",
    "click==8.1.3",
    "httpx==0.24.1",
    "idna==3.4",
    "itsdangerous==2.1.2",
    "MarkupSafe==2.1.1",
    "pydantic",
    "python-dotenv==0.21.0",
    "PyYAML==5.3.1",
    "six==1.16.0",
    "tomli==2.0.1",
    "typing-extensions==4.7.1",
    "urllib3==1.26.13",
    "aiosql==9.0",
    "aiosqlite==0.19.0",
    "pydantic-settings",
    "dpath",
    "pydantic-yaml",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest==7.4.0",
    "pytest-httpx==0.22.0",
    "pytest-asyncio==0.21.1",
    "autopep8==2.0.0",
    "pycodestyle==2.10.0",
]
docs = ["sphinx", "mkdocs"]

[tool.setuptools]
packages = ["inorbit_edge_executor"]
include-package-data = true

[tool.black]
target-version = ['py310']
