[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "inorbit_edge_executor"
version = "3.1.1"
description = "InOrbit Edge Missions Executor"
readme = "README.md"
authors = [
    { name = "Mariano Cereda", email = "mariano.cereda@inorbit.ai" },
    { name = "Hernan Badenes", email = "herchu@inorbit.ai" },
    { name = "Miguel Garcia", email = "mike@inorbit.ai" },
]
license = { text = "MIT" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
requires-python = ">=3.10,<3.13"
dependencies = [
    "async-timeout==4.0.3",
    "httpx==0.24.1",
    "pydantic",
    "typing-extensions==4.7.1",
    "aiosql==9.0",
    "aiosqlite==0.19.0",   
]

[project.optional-dependencies]
dev = [
    "pytest==7.4.0",
    "pytest-httpx==0.22.0",
    "pytest-asyncio==0.21.1",
    "black",
]
docs = ["sphinx", "mkdocs"]

[tool.setuptools]
packages = ["inorbit_edge_executor"]
include-package-data = true

[tool.black]
target-version = ['py310']
line-length = 100
